Remove display:flex and flex-wrap:wrap from resource-list. flex-wrap was causing the last column to wrap incorrectly in Safari Fixes https://jira.coreos.com/browse/CONSOLE-622
display:flex, along with align-items:center was carried over from .middler which was removed in a previous commit.
Since row contents should be top aligned they are not needed.

Related to https://github.com/openshift/console/issues/234

--- a/frontend/public/components/_list.scss
+++ b/frontend/public/components/_list.scss
@@ -27,8 +27,6 @@
 }
 
 .co-resource-list__item {
-  display: flex;
-  flex-wrap: wrap;
   height: 100%;
   transition: all 0.25s;
 }
